--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,14 +11,11 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 20 | Day 1 · 03/25/24</h1>
+                    <h1>Week 20 | Day 2 · 03/26/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we have our first quiz - Quiz 1: WordPress,
-                            Domains, and Hosting. We'll also be setting up all
-                            the things we need to start learning and coding HTML
-                            and CSS.
+                            To
                         </p>
                     </div>
 
@@ -29,27 +26,13 @@
                                 We'll start the class off with Quiz 1: WordPress,
                                 Domains, and Hosting.
                             </li>
-                            <li>
-                                Then we have two powerpoints: General Web Dev and
-                                Intro to HTML
-                            </li>
-                            <li>
-                                After a short break, we'll start and finish our
-                                joint exercise/tutorial where we will get setup
-                                to learn and code HTML and CSS.
-                            </li>
-                            <li>
-                                If time permits, we'll finish off class with a
-                                powerpoint on the Intro to Github.
-                            </li>
                         </ul>
                     </div>
                 
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If you could eat only one cuisine for the rest of
-                            your life, what would it be?
+                            If yo
                             <span>
                                 <i><br>
                                     (e.g.: Asian, Mediterranean, American, etc.)
@@ -71,13 +54,10 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — A group of flamingos is called a "flamboyance".
+                            — A gr
                         </p>
                         <p class="additional-info">
-                            And like many other animals, their knees do not bend
-                            backward! What you see looks like a knee but it is
-                            actually their ankle. Their knees are higher up and
-                            usually not visible.
+                            And li
                         </p>
                     </div>
                 
@@ -86,7 +66,7 @@
                             <img src="images/cookbook.svg" alt="icon">
                             Coding Cookbook
                         </a>
-                        <a href="#" target="_blank" class="btn disabled">
+                        <a href="https://github.com/umiller1/october2023105.github.io" target="_blank" class="btn">
                             <img src="images/github.svg" alt="icon">
                             My Repository
                         </a>
