--- a/agenda/index.html
+++ b/agenda/index.html
@@ -15,7 +15,8 @@
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            To
+                            Today we'll be learning all the
+                            basics of coding in HTML.
                         </p>
                     </div>
 
@@ -23,8 +24,21 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start the class off with Quiz 1: WordPress,
-                                Domains, and Hosting.
+                                We'll start the class off a
+                                powerpoint on HTML Tags And
+                                Elements.
+                            </li>
+                            <li>
+                                Then, we have two demos: HTML
+                                Headings and Text Styling Elements
+                            </li>
+                            <li>
+                                After a short break, we have a
+                                powerpoint on HTML Clean Code pt 1.
+                            </li>
+                            <li>
+                                Then we'll do our Hello World Exercise
+                                followed by our Basic HTML Drills.
                             </li>
                         </ul>
                     </div>
