--- a/agenda/index.html
+++ b/agenda/index.html
@@ -46,10 +46,12 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If yo
+                            If you could own a farm that specialized
+                            in one mythical creature, what would
+                            it be?
                             <span>
                                 <i><br>
-                                    (e.g.: Asian, Mediterranean, American, etc.)
+                                    (e.g.: Dragons, wyverns, griffins, pheonixs, unicorns, etc.)
                                 </i>
                             </span>
                         </p>
@@ -68,10 +70,12 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — A gr
+                            — Australia once had a war against the Emus.
+                            It was known as the Great Emu War.
                         </p>
                         <p class="additional-info">
-                            And li
+                            They lost the war. It only lasted
+                            1 month, 1 week, and a day.
                         </p>
                     </div>
                 
