--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -11,19 +11,63 @@
        <main>
             <section id="limg" class="banner">
                 <div>
-
+                    <h1>
+                        Here are things <b>🫵 YOU 🫵</b> could be doing.
+                    </h1>
+                    <p>
+                        and you <b>SHOULD</b> be doing at one
+                        of them.
+                    </p>
                 </div>
             </section>
 
-            <section id="middle" class="contain">
-                <div>
-                    
+            <section id="middle">
+                <div class="contain">
+                    <div class="card">
+                        <p>Working on ProjectNAME.</p>
+                    </div>
+                    <div class="card">
+                        <p>
+                            Working on any assignments you
+                            missed.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <p>
+                            Working on previous assignments for
+                            a better grade.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <p>
+                            Studying for an uncoming quiz.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <p>
+                            Doing challenges from previous
+                            assignments.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <p>
+                            Practicing your HTML and/or CSS
+                            skills. Build whatever you want!
+                        </p>
+                    </div>
                 </div>
             </section>
 
-            <section id="limg" class="banner">
+            <section id="rimg" class="banner">
                 <div>
-                    
+                    <h2>
+                        Earth Lore:
+                    </h2>
+                    <p>
+                        The Easter Island Heads also have
+                        torsos. They are either partially or
+                        completely buried.
+                    </p>
                 </div>
             </section>
        </main>
