--- a/headings-demo/index.html
+++ b/headings-demo/index.html
@@ -4,9 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Headings Demo</title>
     </head>
     <body>
+        
+        <h1>This is an example of heading level 1.</h1>
+        <h2>This is an example of heading level 2.</h2>
+        <h3>This is an example of heading level 3.</h3>
+        <h4>This is an example of heading level 4.</h4>
+        <h5>This is an example of heading level 5.</h5>
+        <h6>This is an example of heading level 6.</h6>
         
     </body>
 </html>
