--- a/text-styling-elements-demo/index.html
+++ b/text-styling-elements-demo/index.html
@@ -35,7 +35,7 @@
 
         <p>
             This is <sup>superscripted text</sup> inside of a
-            paragraph.
+            paragraph.s
         </p>
 
         <p>
