--- a/basic-html-drills/index.html
+++ b/basic-html-drills/index.html
@@ -16,19 +16,22 @@
             <div class="solution">
                 <!-- MODIFY THE CODE BELOW THIS COMMENT -->
 
-                This should become a heading (probably)
+                <h3>This should become a heading (probably)</h3>
 
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Unde culpa excepturi amet exercitationem doloremque 
-                provident fugit dolores repellat veritatis perspiciatis 
-                cumque odio accusantium, sunt quaerat magnam! Asperiores 
-                tempore id adipisci!
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Unde culpa excepturi amet exercitationem doloremque 
+                    provident fugit dolores repellat veritatis perspiciatis 
+                    cumque odio accusantium, sunt quaerat magnam! Asperiores 
+                    tempore id adipisci!
+                </p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Earum reprehenderit inventore, quam suscipit deleniti, 
-                asperiores perspiciatis ab, cumque pariatur laudantium 
-                omnis cum quo neque maxime vel aut consequuntur illum ad?
-
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Earum reprehenderit inventore, quam suscipit deleniti, 
+                    asperiores perspiciatis ab, cumque pariatur laudantium 
+                    omnis cum quo neque maxime vel aut consequuntur illum ad?
+                </p>
                 
                 <!-- COMPLETE YOUR MODIFICATIONS ABOVE THIS COMMENT -->
             </div>
@@ -42,15 +45,19 @@
             <div class="solution">
                 <!-- MODIFY THE CODE BELOW THIS COMMENT -->
 
-                This is an important heading
+                <h2>This is an important heading</h2>
 
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Excepturi eos rem porro dolore eius, beatae cupiditate.
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Excepturi eos rem porro dolore eius, beatae cupiditate.
+                </p>
 
-                This is a less important heading
+                <h4>This is a less important heading</h4>
 
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Nam eaque veritatis qui ratione obcaecati ipsa earum.
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Nam eaque veritatis qui ratione obcaecati ipsa earum.
+                </p>
                 
                 <!-- COMPLETE YOUR MODIFICATIONS ABOVE THIS COMMENT -->
             </div>
