--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,14 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 20 | Day 2 · 03/26/24</h1>
+                    <h1>Week 20 | Day 3 · 03/27/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning all the
-                            basics of coding in HTML.
+                            Today we'll be learning about
+                            Lists, Images, and HTML Attributes.
+                            We'll also finish our Drills from
+                            yesterday.
                         </p>
                     </div>
 
@@ -24,21 +26,33 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start the class off a
-                                powerpoint on HTML Tags And
-                                Elements.
+                                We'll start the class by finishing
+                                yesterday's drills.
                             </li>
                             <li>
-                                Then, we have two demos: HTML
-                                Headings and Text Styling Elements
+                                Then, we have a review kahoot on Tags
+                                and Elements.
                             </li>
                             <li>
-                                After a short break, we have a
-                                powerpoint on HTML Clean Code pt 1.
+                                Then we'll do a demo on HTML Lists.
                             </li>
                             <li>
-                                Then we'll do our Hello World Exercise
-                                followed by our Basic HTML Drills.
+                                After a short break, we have a kahoot
+                                on HTML Indentation
+                            </li>
+                            <li>
+                                Then we have a demo on HTML
+                                Images
+                            </li>
+                            <li>
+                                Following, we have a powerpoint
+                                on HTML attributes and another
+                                on Clean Code part 2.
+                            </li>
+                            <li>
+                                We'll then spend the rest of
+                                class on the Wiki Page 1
+                                exercise.
                             </li>
                         </ul>
                     </div>
