--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -22,7 +22,7 @@
             </section>
 
             <section id="middle">
-                <div class="contain">
+                <div class="contain card-holder">
                     <div class="card">
                         <p>Working on ProjectNAME.</p>
                     </div>
@@ -45,14 +45,14 @@
                     </div>
                     <div class="card">
                         <p>
-                            Doing challenges from previous
+                            Do challenges from previous
                             assignments.
                         </p>
                     </div>
                     <div class="card">
                         <p>
-                            Practicing your HTML and/or CSS
-                            skills. Build whatever you want!
+                            Practicing HTML &amp; CSS.
+                            Build whatever you want!
                         </p>
                     </div>
                 </div>
