--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -15,14 +15,14 @@
                         Here are things <b>🫵 YOU 🫵</b> could be doing.
                     </h1>
                     <p>
-                        and you <b>SHOULD</b> be doing at one
-                        of them.
+                        You <b>SHOULD</b> be doing at least 
+                        one of them.
                     </p>
                 </div>
             </section>
 
             <section id="middle">
-                <div class="contain card-holder">
+                <div class="card-holder">
                     <div class="card">
                         <p>Working on ProjectNAME.</p>
                     </div>
