--- a/agenda/index.html
+++ b/agenda/index.html
@@ -60,12 +60,14 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If you could own a farm that specialized
-                            in one mythical creature, what would
-                            it be?
+                            You can only chose one pastry to
+                            eat for the rest of your life as 
+                            you'll become allergic to every
+                            other pastry. What pastry would 
+                            you choose?
                             <span>
                                 <i><br>
-                                    (e.g.: Dragons, wyverns, griffins, pheonixs, unicorns, etc.)
+                                    (e.g.: Croissant, baklava, macaron, danish, cannoli, etc.)
                                 </i>
                             </span>
                         </p>
@@ -84,12 +86,18 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Australia once had a war against the Emus.
-                            It was known as the Great Emu War.
+                            — Cows have best friends and become
+                            stressed when separated from them.
                         </p>
                         <p class="additional-info">
-                            They lost the war. It only lasted
-                            1 month, 1 week, and a day.
+                            Cows with similar dispositions
+                            gravitate toward one another,
+                            forging a close relationship
+                            in the process. This is essentially
+                            cattle bonding as they tend to seek
+                            out relationships with like-minded
+                            individuals similar to humans.
+                            They can even form lifelong friendships.
                         </p>
                     </div>
                 
