--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -24,7 +24,7 @@
             <section id="middle">
                 <div class="card-holder">
                     <div class="card">
-                        <p>Working on ProjectNAME.</p>
+                        <p>Working on HTML Potluck Project.</p>
                     </div>
                     <div class="card">
                         <p>
