--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,14 +11,14 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 20 | Day 3 · 03/27/24</h1>
+                    <h1>Week 20 | Day 4 · 03/28/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
                             Today we'll be learning about
-                            Lists, Images, and HTML Attributes.
-                            We'll also finish our Drills from
-                            yesterday.
+                            anchor elements which allow us
+                            to create hyperlinks to webpages
+                            and sections on a page.
                         </p>
                     </div>
 
@@ -26,33 +26,27 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start the class by finishing
-                                yesterday's drills.
+                                We'll start the class with a
+                                review Kahoot on HTML Attributes.
                             </li>
                             <li>
-                                Then, we have a review kahoot on Tags
-                                and Elements.
+                                Then, we have a demo on HTML
+                                Anchors.
                             </li>
                             <li>
-                                Then we'll do a demo on HTML Lists.
+                                After a short break, we have
+                                another review Kahoot on
+                                HTML Indentation II.
                             </li>
                             <li>
-                                After a short break, we have a kahoot
-                                on HTML Indentation
+                                Then we'll spend the rest of
+                                class working on Wiki Page 2.
                             </li>
                             <li>
-                                Then we have a demo on HTML
-                                Images
-                            </li>
-                            <li>
-                                Following, we have a powerpoint
-                                on HTML attributes and another
-                                on Clean Code part 2.
-                            </li>
-                            <li>
-                                We'll then spend the rest of
-                                class on the Wiki Page 1
-                                exercise.
+                                If time permits, I'll demo
+                                the Font Awesome Icon Library
+                                tutorial found in the Coding
+                                Cookbook.
                             </li>
                         </ul>
                     </div>
@@ -60,14 +54,18 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            You can only chose one pastry to
-                            eat for the rest of your life as 
-                            you'll become allergic to every
-                            other pastry. What pastry would 
-                            you choose?
+                            You've one a free one month vacation
+                            to a country of your choosing with 
+                            a voucher that let's you purchase
+                            up to $10,000 worth of items per week.
+                            What country are you visiting?
+                            <i><b>
+                                yes, you receive whatever money
+                                you didn't spend that's leftover.
+                            </i></b>
                             <span>
                                 <i><br>
-                                    (e.g.: Croissant, baklava, macaron, danish, cannoli, etc.)
+                                    (e.g.: Canada, Bolivia, Portugal, Botswana, Columbia, etc.)
                                 </i>
                             </span>
                         </p>
