--- a/agenda/index.html
+++ b/agenda/index.html
@@ -84,18 +84,12 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Cows have best friends and become
-                            stressed when separated from them.
+                            — A single strand of spaghetti is
+                            called a spaghetto.
                         </p>
                         <p class="additional-info">
-                            Cows with similar dispositions
-                            gravitate toward one another,
-                            forging a close relationship
-                            in the process. This is essentially
-                            cattle bonding as they tend to seek
-                            out relationships with like-minded
-                            individuals similar to humans.
-                            They can even form lifelong friendships.
+                            It is the same for a cannoli and ravioli;
+                            cannolo and raviolo respectively.
                         </p>
                     </div>
                 
