--- a/agenda/index.html
+++ b/agenda/index.html
@@ -54,7 +54,7 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            You've one a free one month vacation
+                            You've won a free one month vacation
                             to a country of your choosing with 
                             a voucher that let's you purchase
                             up to $10,000 worth of items per week.
