--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,14 +11,14 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 20 | Day 4 · 03/28/24</h1>
+                    <h1>Week 20 | Day 5 · 03/29/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning about
-                            anchor elements which allow us
-                            to create hyperlinks to webpages
-                            and sections on a page.
+                            Today we'll have an HTML Children
+                            Review Kahoot and we'll spend the
+                            rest of the day working on our
+                            HTML Potluck Project.
                         </p>
                     </div>
 
@@ -27,26 +27,11 @@
                         <ul>
                             <li>
                                 We'll start the class with a
-                                review Kahoot on HTML Attributes.
+                                review Kahoot on HTML Children.
                             </li>
                             <li>
-                                Then, we have a demo on HTML
-                                Anchors.
-                            </li>
-                            <li>
-                                After a short break, we have
-                                another review Kahoot on
-                                HTML Indentation II.
-                            </li>
-                            <li>
-                                Then we'll spend the rest of
-                                class working on Wiki Page 2.
-                            </li>
-                            <li>
-                                If time permits, I'll demo
-                                the Font Awesome Icon Library
-                                tutorial found in the Coding
-                                Cookbook.
+                                Then, we'll spend the rest of class
+                                working on the HTML Potluck Project.
                             </li>
                         </ul>
                     </div>
@@ -54,14 +39,9 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            You've won a free one month vacation
-                            to a country of your choosing with 
-                            a voucher that let's you purchase
-                            up to $10,000 worth of items per week.
-                            What country are you visiting?
+                            You've w\
                             <i><b>
-                                yes, you receive whatever money
-                                you didn't spend that's leftover.
+                                yes, 
                             </i></b>
                             <span>
                                 <i><br>
