--- a/agenda/index.html
+++ b/agenda/index.html
@@ -39,13 +39,13 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            You've w\
-                            <i><b>
-                                yes, 
-                            </i></b>
+                            Theoretically, if there was another
+                            universe in which we all exist but
+                            as an animal, what animal do you think
+                            you would be?
                             <span>
                                 <i><br>
-                                    (e.g.: Canada, Bolivia, Portugal, Botswana, Columbia, etc.)
+                                    (e.g.: Cat, dog, fish, bobcat, tiger, sealion, etc.)
                                 </i>
                             </span>
                         </p>
@@ -64,12 +64,15 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — A single strand of spaghetti is
-                            called a spaghetto.
+                            — The first animal to be cloned
+                            was a sheep named Dolly.
                         </p>
                         <p class="additional-info">
-                            It is the same for a cannoli and ravioli;
-                            cannolo and raviolo respectively.
+                            She was born — cloned from an
+                            adult cell — at the Roslin
+                            Institute in Scotland. She was
+                            named after singer and actress
+                            Dolly Parton.
                         </p>
                     </div>
                 
