--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,14 +11,11 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 20 | Day 5 · 03/29/24</h1>
+                    <h1>Week 21 | Day 1 · 04/01/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll have an HTML Children
-                            Review Kahoot and we'll spend the
-                            rest of the day working on our
-                            HTML Potluck Project.
+                            Today we have a lab day.
                         </p>
                     </div>
 
@@ -26,12 +23,14 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start the class with a
-                                review Kahoot on HTML Children.
+                                We'll have the entire day to
+                                work on whatever we need to.
                             </li>
                             <li>
-                                Then, we'll spend the rest of class
-                                working on the HTML Potluck Project.
+                                In addition to our first extra
+                                credit assignment, I will do
+                                and optional demo on how to 
+                                add videos and audio to HTML.
                             </li>
                         </ul>
                     </div>
@@ -39,19 +38,17 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            Theoretically, if there was another
-                            universe in which we all exist but
-                            as an animal, what animal do you think
-                            you would be?
+                            What is one of your favorite
+                            aesthetics?
                             <span>
                                 <i><br>
-                                    (e.g.: Cat, dog, fish, bobcat, tiger, sealion, etc.)
+                                    (e.g.: Solar punk, goth, minimalist, eclectic, victorian, art deco, bohemian, etc.)
                                 </i>
                             </span>
                         </p>
                     </div>
                 
-                    <a href="labday.html" target="_blank" class="btn alt disabled">
+                    <a href="labday.html" target="_blank" class="btn alt">
                         <img src="images/microscope-pink.svg" alt="icon">
                         Lab Day Activities
                         <img src="images/microscope-blue.svg" alt="icon">
@@ -64,15 +61,13 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — The first animal to be cloned
-                            was a sheep named Dolly.
+                            — It is impossible to humn while
+                            holding your nose.
                         </p>
                         <p class="additional-info">
-                            She was born — cloned from an
-                            adult cell — at the Roslin
-                            Institute in Scotland. She was
-                            named after singer and actress
-                            Dolly Parton.
+                            This is because when you hum, you
+                            are exhaling. If both your mouth
+                            and nose are closed, air cannot escape.
                         </p>
                     </div>
                 
