--- a/agenda/labday.html
+++ b/agenda/labday.html
@@ -28,14 +28,14 @@
                     </div>
                     <div class="card">
                         <p>
-                            Working on any assignments you
-                            missed.
+                            Working on previous assignments
+                            that were missed or had a low grade.
                         </p>
                     </div>
                     <div class="card">
                         <p>
-                            Working on previous assignments for
-                            a better grade.
+                            Working on any available extra
+                            credit assignments.
                         </p>
                     </div>
                     <div class="card">
