--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,11 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 21 | Day 1 · 04/01/24</h1>
+                    <h1>Week 21 | Day 2 · 04/02/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we have a lab day.
+                            Today we'll be diving into CSS,
+                            the language of style and aesthetic.
                         </p>
                     </div>
 
@@ -23,14 +24,11 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll have the entire day to
-                                work on whatever we need to.
+                                We'll start off with our Quiz 2:
+                                HTML Fundamentals.
                             </li>
                             <li>
-                                In addition to our first extra
-                                credit assignment, I will do
-                                and optional demo on how to 
-                                add videos and audio to HTML.
+                                
                             </li>
                         </ul>
                     </div>
