--- a/agenda/index.html
+++ b/agenda/index.html
@@ -28,7 +28,24 @@
                                 HTML Fundamentals.
                             </li>
                             <li>
-                                
+                                Then we have a powerpoint on
+                                Intro to CSS followed by
+                                another on CSS properties.
+                            </li>
+                            <li>
+                                After a short break, we have
+                                a demo on CSS Colors and Text
+                                Styling alongside linking our
+                                HTML to CSS.
+                            </li>
+                            <li>
+                                Then we have our Basic CSS
+                                Drills Pt. 1.
+                            </li>
+                            <li>
+                                Afterwards, we'll spend the
+                                rest of class working on the
+                                Color Palettes Exercise.
                             </li>
                         </ul>
                     </div>
@@ -36,11 +53,10 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            What is one of your favorite
-                            aesthetics?
+                            What ?
                             <span>
                                 <i><br>
-                                    (e.g.: Solar punk, goth, minimalist, eclectic, victorian, art deco, bohemian, etc.)
+                                    (e.g.: n, etc.)
                                 </i>
                             </span>
                         </p>
@@ -59,13 +75,10 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — It is impossible to humn while
-                            holding your nose.
+                            — It 
                         </p>
                         <p class="additional-info">
-                            This is because when you hum, you
-                            are exhaling. If both your mouth
-                            and nose are closed, air cannot escape.
+                            This i
                         </p>
                     </div>
                 
