--- a/agenda/index.html
+++ b/agenda/index.html
@@ -53,10 +53,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            What ?
+                            What is your dream home interior design
+                            style?
                             <span>
                                 <i><br>
-                                    (e.g.: n, etc.)
+                                    (e.g.: Bauhaus, minimalist, bohemian, art deco, eclectic, etc.)
                                 </i>
                             </span>
                         </p>
@@ -75,10 +76,14 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — It 
+                            — Pigeons can recognize themselves.
                         </p>
                         <p class="additional-info">
-                            This i
+                            They are able to identify themselves over
+                            a picture of a different pigeon and can even
+                            identify different humans in photos. They
+                            are also able to identify benign and malignant
+                            cancerous growths if trained to.
                         </p>
                     </div>
                 
