--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,12 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 21 | Day 2 · 04/02/24</h1>
+                    <h1>Week 21 | Day 3 · 04/03/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be diving into CSS,
-                            the language of style and aesthetic.
+                            Today we'll be learning about Document flow
+                            and finishing our Color Palettes exericse.
                         </p>
                     </div>
 
@@ -24,28 +24,24 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start off with our Quiz 2:
-                                HTML Fundamentals.
+                                We'll start off with some demo and lab
+                                time for our Color Palettes exercise.
                             </li>
                             <li>
-                                Then we have a powerpoint on
-                                Intro to CSS followed by
-                                another on CSS properties.
+                                Then we have our Basic CSS Drills
+                                exericse part 2.
                             </li>
                             <li>
                                 After a short break, we have
-                                a demo on CSS Colors and Text
-                                Styling alongside linking our
-                                HTML to CSS.
+                                a powerpoint on CSS Selectors.
                             </li>
                             <li>
-                                Then we have our Basic CSS
-                                Drills Pt. 1.
+                                Then we have our a demo on Divs, Spans,
+                                and Flow.
                             </li>
                             <li>
-                                Afterwards, we'll spend the
-                                rest of class working on the
-                                Color Palettes Exercise.
+                                Afterwards, we have a powerpoint and
+                                some drills on Document Flow.
                             </li>
                         </ul>
                     </div>
