--- a/agenda/index.html
+++ b/agenda/index.html
@@ -43,17 +43,21 @@
                                 Afterwards, we have a powerpoint and
                                 some drills on Document Flow.
                             </li>
+                            <li>
+                                If time permits, we'll do a kahoot
+                                review on CSS Rules.
+                            </li>
                         </ul>
                     </div>
                 
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            What is your dream home interior design
-                            style?
+                            If you could go ten years back in time
+                            to give past yourself 1 item, what would it be?
                             <span>
                                 <i><br>
-                                    (e.g.: Bauhaus, minimalist, bohemian, art deco, eclectic, etc.)
+                                    (e.g.: PLaystation 5, Butter Chicken Recipe, A cat, etc.)
                                 </i>
                             </span>
                         </p>
@@ -72,14 +76,14 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Pigeons can recognize themselves.
+                            — Trees can communicate with each other.
                         </p>
                         <p class="additional-info">
-                            They are able to identify themselves over
-                            a picture of a different pigeon and can even
-                            identify different humans in photos. They
-                            are also able to identify benign and malignant
-                            cancerous growths if trained to.
+                            They share water and nutrients through
+                            networks with which they can also send
+                            distress signals through about drought
+                            and disease. Other trees alter their
+                            behavior in response. 
                         </p>
                     </div>
                 
