--- a/color-palettes/index.html
+++ b/color-palettes/index.html
@@ -8,6 +8,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <!-- Color Palette 1 -->
         <h2 id="head1">Morning Jog</h2>
         <div id="c1">
             <h3>Energy</h3>
@@ -20,6 +21,13 @@
         <div id="c3">
             <h3>Dirtpath</h3>
             <h4>#ff8123</h4>
+        </div>
+
+        <!-- Color Palette 2 -->
+        <h2 id="head2">Lo-fi Makeup Kit</h2>
+        <div id="c4">
+            <h3>Lavenduour</h3>
+            <h4>#E7D8FF</h4>
         </div>
 
 
