--- a/agenda/index.html
+++ b/agenda/index.html
@@ -11,12 +11,11 @@
         <main>
             <section id="left">
                 <div class="container a">
-                    <h1>Week 21 | Day 3 · 04/03/24</h1>
+                    <h1>Week 21 | Day 4 · 04/04/24</h1>
                     <div class="intro">
                         <h2>Good evening everyone,</h2>
                         <p>
-                            Today we'll be learning about Document flow
-                            and finishing our Color Palettes exericse.
+                            Today we'll be learning about the Box Model.
                         </p>
                     </div>
 
@@ -24,28 +23,22 @@
                         <h2>Agenda</h2>
                         <ul>
                             <li>
-                                We'll start off with some demo and lab
-                                time for our Color Palettes exercise.
+                                We'll start off a review Kahoot on CSS
+                                Rules.
                             </li>
                             <li>
-                                Then we have our Basic CSS Drills
-                                exericse part 2.
+                                Then we have a powerpoint on the Box
+                                Model followed by a Demo on the Box
+                                Model.
                             </li>
                             <li>
-                                After a short break, we have
-                                a powerpoint on CSS Selectors.
+                                After a short break, we have our Padding
+                                Drills followed by our Border Drills.
                             </li>
                             <li>
-                                Then we have our a demo on Divs, Spans,
-                                and Flow.
-                            </li>
-                            <li>
-                                Afterwards, we have a powerpoint and
-                                some drills on Document Flow.
-                            </li>
-                            <li>
-                                If time permits, we'll do a kahoot
-                                review on CSS Rules.
+                                Then we'll spend the rest of class
+                                working on the Upside-down Tetris
+                                Exercise.
                             </li>
                         </ul>
                     </div>
