--- a/agenda/index.html
+++ b/agenda/index.html
@@ -24,7 +24,8 @@
                         <ul>
                             <li>
                                 We'll start off a review Kahoot on CSS
-                                Rules.
+                                Rules followed by another review Kahoot
+                                on Document Flow and HTML Elements.
                             </li>
                             <li>
                                 Then we have a powerpoint on the Box
@@ -46,11 +47,11 @@
                     <div class="attendance">
                         <h2>Attendance Question:</h2>
                         <p>
-                            If you could go ten years back in time
-                            to give past yourself 1 item, what would it be?
+                            If you were to write a book or script, what
+                            genre would it be?
                             <span>
                                 <i><br>
-                                    (e.g.: PLaystation 5, Butter Chicken Recipe, A cat, etc.)
+                                    (e.g.: Documentary, Mockumentary, fiction, Comedy, Horror Slasher, Comedy Action, etc.)
                                 </i>
                             </span>
                         </p>
@@ -69,14 +70,14 @@
                     <div class="funfact">
                         <h2>Daily Fun Fact</h2>
                         <p class="main-fact">
-                            — Trees can communicate with each other.
+                            — Our brains are constantly eating themselves.
                         </p>
                         <p class="additional-info">
-                            They share water and nutrients through
-                            networks with which they can also send
-                            distress signals through about drought
-                            and disease. Other trees alter their
-                            behavior in response. 
+                            It is a process called Phagocytosis where
+                            cells will envelop and consume smaller
+                            cells or molecules in order to remove them
+                            from the system. So, next time you tell someone
+                            they ate, their brain definitely did.
                         </p>
                     </div>
                 
